--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <a href="https://github.com/AlexRahmanov">GitHub</a><br />
       <a href="https://www.linkedin.com/in/alexander-rahmanov/">LinkedIn</a><br />
       Phone: <a href="tel:4372201950">(437)-220-1950</a><br/>
-      Email: <a href="alexr722@gmail.com">Alexander Rahmanov</a>
+      Email: <a href="mailto:alexr722@gmail.com?">Alexander Rahmanov</a><br/>
     </address>
     </div>
 </section>
